robot_architecture/v0.0.2.1/22.md
**Architecture Version:** v0.0.2.1  
**Document Role:** Normative architectural chapter  
**v0.0.2.1 Focus:** Schema ownership, migration discipline, indexes, constraints, transactional integrity and compatibility  

|==========|==========|==========|==========| Chapter 22 - Database Design |==========|==========|==========|==========|

Chapter 22 - Database Design
22.1 Overview

The RoBoT database system is the foundation layer that allows the cognitive architecture to persist, retrieve, organize, and evolve information over time.

Unlike traditional applications where databases primarily store records, RoBoT treats storage as part of its cognitive infrastructure.

The database is not the brain.

It is the long-term memory substrate that allows the brain systems to develop continuity.

The architecture separates different categories of knowledge because not all information has the same purpose, lifespan, or confidence requirements.

RoBoT uses a multi-layer database design:

                    RoBoT Cognitive System

                         |
                         |
                 Storage Architecture

                         |
        ---------------------------------------
        |                 |                   |

Experience DB Knowledge DB Memory DB

        |                 |                   |

Events Concepts Memories
Outcomes Skills Facts
Failures Relationships Context
Feedback Graph Data Embeddings

Each storage layer has a different responsibility.

22.2 Database Philosophy

Traditional AI systems often treat memory as a single searchable archive.

RoBoT does not.

A single memory bucket creates several problems:

information becomes duplicated
outdated knowledge remains active
confidence becomes unclear
retrieval becomes noisy
learning cannot distinguish success from failure

RoBoT instead uses structured cognitive storage.

Information is stored based on:

purpose
reliability
confidence
relationship
usage history
learning value

The database answers:

"What does RoBoT know?"

The Experience System answers:

"What has RoBoT done?"

The Learning System answers:

"What did RoBoT improve from?"

The Confidence System answers:

"How much should RoBoT trust this?"

22.3 Storage Layers

RoBoT storage is divided into five major database domains.

Storage Layer

├── Working Memory
│
├── Experience Database
│
├── Knowledge Database
│
├── Memory Database
│
└── System Database
22.4 Working Memory Storage

Working Memory is temporary cognitive space.

It exists during active reasoning and conversation.

Characteristics:

short lifespan
high change rate
disposable
optimized for speed

Examples:

Current conversation
Active task
Temporary reasoning
Current plan
Recent observations

Working memory should not immediately become permanent memory.

The pipeline is:

Input
|
v
Working Memory
|
|
Evaluation
|
v
Experience / Memory Candidate
|
|
Confidence Review
|
v
Permanent Storage

This prevents database contamination from every interaction.

22.5 Experience Database

The Experience Database stores what RoBoT has done.

Experience is different from knowledge.

Knowledge:

"Rust uses ownership rules."

Experience:

"I attempted a Rust database migration. The first approach failed because of lifetime issues."

Experience creates improvement.

Experience Tables
experiences

Stores individual events.

CREATE TABLE experiences (
id TEXT PRIMARY KEY,
timestamp INTEGER,

    category TEXT,
    action TEXT,

    context TEXT,

    result TEXT,

    success BOOLEAN,

    confidence REAL,

    importance REAL

);
Experience Outcomes

RoBoT records results.

Examples:

Successful:
Implemented SQLite migration
Confidence +0.05

Failed:
Incorrect async architecture
Confidence -0.10

Failure is valuable data.

A system that only stores successes cannot improve.

Experience Relationships

Experiences connect together.

Example:

Experience A

Rust MCP implementation

        |
        |
        v

Experience B

Tokio async debugging

        |
        |
        v

Experience C

Final architecture improvement

Relationships themselves have confidence.

Example:

Rust ownership
|
|
confidence: 0.92
|
v
Memory safety improvements
22.6 Knowledge Database

The Knowledge Database contains structured understanding.

It represents what RoBoT believes to be true.

Examples:

concepts
skills
procedures
definitions
relationships
Knowledge Cards

RoBoT uses an index-card style architecture.

Each knowledge item is a card.

Example:

Knowledge Card

ID:
rust_async_basics

Type:
Skill

Content:
Rust async uses futures and executors.

Prerequisites:
rust_ownership

Confidence:
0.87

Last Used:
2026-07-28
Knowledge Table
CREATE TABLE knowledge_cards (

    id TEXT PRIMARY KEY,

    type TEXT,

    title TEXT,

    content TEXT,

    confidence REAL,

    created INTEGER,

    updated INTEGER,

    usage_count INTEGER

);
22.7 Skill Database

Skills are stored separately from general knowledge.

A skill represents capability.

Examples:

Skill:

Build Rust MCP Server

Prerequisites:

Rust ownership
Tokio async
SQLite

Confidence:

0.81
Skill Confidence

RoBoT does not use a simple:

I know this

model.

Instead:

Skill Confidence

-

Experience Count

-

Success Rate

-

Recency

-

Difficulty

Example:

Python scripting

Knowledge:
95%

Practical ability:
82%

Recent reliability:
88%
22.8 Relationship Database

Relationships are first-class objects.

A connection between two concepts is also knowledge.

Example:

Rust

    |
    |

requires

    |
    v

Ownership System

The relationship has:

Source

Relationship Type

Target

Confidence

Evidence Count

Database:

CREATE TABLE relationships (

id TEXT PRIMARY KEY,

source_id TEXT,

relation TEXT,

target_id TEXT,

confidence REAL,

evidence_count INTEGER

);
22.9 Memory Database

Memory stores remembered information.

It is different from knowledge.

Memory:

"The user prefers Rust implementations."

Knowledge:

"Rust provides memory safety."

Memory Categories
Memory

├── Episodic Memory
│
├── Semantic Memory
│
├── Preference Memory
│
└── Context Memory
Memory Card

Example:

Memory Card

User prefers:
Rust over Python

Source:
Conversation

Confidence:
0.91

Importance:
High

Last confirmed:
2026-07-20
22.10 Vector Storage Integration

RoBoT uses hybrid retrieval.

Not everything belongs in SQL lookup.

The retrieval architecture:

Query

|
|
+----------------+
| |
SQL Search Vector Search
| |
| |
+-------+--------+

         |
         v

Knowledge Fusion

         |
         v

Context Builder

Vector storage provides:

semantic similarity
fuzzy recall
contextual matching

SQL provides:

precision
relationships
metadata
confidence filtering
22.11 Graph Storage

The Knowledge Graph is not separate from the database.

It is a specialized view of stored relationships.

Example:

        Rust

         |
      requires

         |

      Ownership

         |

      Enables

         |

     Memory Safety

The graph allows:

reasoning chains
dependency discovery
skill planning
explanation generation
22.12 System Database

The System Database stores RoBoT operational information.

Examples:

Configuration

Model information

Plugin registry

MCP tools

System state

Migration versions

Example:

CREATE TABLE system_state (

key TEXT PRIMARY KEY,

value TEXT,

updated INTEGER

);
22.13 Database Implementation

Current implementation:

Rust

    |
    |

rusqlite

    |
    |

SQLite

    |
    |

robot_brain.db

Database location:

data/
|
└── robot_brain.db

The database layer provides:

SqliteDatabase

    |
    |

Repositories

    |
    |

Cognitive Systems
22.14 Repository Pattern

RoBoT avoids direct database access from cognitive systems.

Incorrect:

Memory Engine
|
|
SQLite

Correct:

Memory Engine

       |

Memory Repository

       |

Database Layer

       |

SQLite

Benefits:

easier migrations
testing
storage replacement
cleaner architecture
22.15 Database Migration Strategy

The database must evolve without losing knowledge.

Migration system:

Version 001

Initial schema

Version 002

Experience improvements

Version 003

Knowledge graph expansion

Every schema change receives:

version number
migration script
rollback strategy
22.16 Future Storage Evolution

SQLite is the foundation, not the final destination.

Future possibilities:

SQLite

|

Hybrid Database

|

Distributed Cognitive Storage

Potential future systems:

embedded vector databases
graph databases
distributed memory stores
cloud synchronization
multi-agent shared knowledge

The architecture remains unchanged because storage is abstracted.

22.17 Database Security and Integrity

RoBoT memory is valuable.

Protection includes:

transaction safety
backups
integrity checks
corruption recovery
audit history

Critical cognitive information should never silently disappear.

22.18 Database Flow

Complete storage lifecycle:

Input

|

Conversation Engine

|

Working Memory

|

Experience Evaluation

|

Learning System

|

Confidence System

|

Storage Decision

|

---

Memory Database

Knowledge Database

Experience Database

System Database

---

|

Future Retrieval

|

Improved Reasoning
22.19 Design Goals

The RoBoT database system must provide:

Persistence

Knowledge survives restarts.

Organization

Information is separated by purpose.

Learning

Experience improves future behavior.

Confidence

Every belief has measurable reliability.

Explainability

RoBoT can explain why it knows something.

Evolution

The architecture can grow without rebuilding the brain.

22.20 Final Architecture Principle

A database is not merely where RoBoT stores information.

It is where experience becomes memory, memory becomes knowledge, and knowledge becomes capability.

The database provides the roots.

The cognitive engines provide the growth.

Together they create a system that does not simply retrieve information, but develops understanding over time.

End of Chapter 22 - Database Design

## Final v0.0.2.1 Integration Contract

This chapter is normative within the v0.0.2.1 architecture. Its subject matter must integrate with the architecture-wide contract in `FINAL_ARCHITECTURE_SPEC.md`.

### Required cross-boundary behavior

1. **Ownership:** This chapter defines or refines responsibilities without taking ownership of another subsystem's durable state.
2. **Lifecycle:** Every state or operation introduced here has explicit creation, active, completion, failure, retention, expiration, or archival behavior as applicable.
3. **Identity:** Operations retain the correlation and entity identifiers needed to reconstruct their relationship to conversations, goals, plans, actions, executions, experiences, events, and configuration changes.
4. **Evidence:** Observed information, inferred information, candidate changes, evaluated information, and promoted knowledge remain distinguishable.
5. **Uncertainty:** Missing information, contradiction, confidence, and unresolved conditions are represented rather than silently collapsed.
6. **Failure:** Errors, retries, partial completion, cancellation, recovery, and terminal failure remain observable.
7. **Model independence:** This chapter must not require persistent state to live inside a particular model, prompt format, inference runtime, or context window.
8. **Controlled effects:** Any external or privileged effect must pass through the appropriate authorization, execution, validation, and audit boundary.
9. **Observability:** Important state transitions and outcomes must produce structured evidence suitable for monitoring and reconstruction.
10. **Versioning:** Changes to contracts, schemas, events, or lifecycle semantics require explicit versioning and compatibility handling.
11. **GUI/control-plane integration:** When this chapter exposes functionality to humans, the GUI communicates through the Developer Interface and Control Plane. It must not directly mutate subsystem storage or bypass security.
12. **Testing:** The chapter's architectural guarantees must be testable through the testing architecture defined in Chapter 30.

### Chapter-specific v0.0.2.1 focus

**Schema ownership, migrations, indexes, constraints, transactional integrity, compatibility, audit records and domain separation.**

### Definition of done

This chapter is considered v0.0.2.1-complete only when its responsibilities, interfaces, lifecycle, failure behavior, security boundary, persistence implications, observability, and testing requirements can be identified without relying on undocumented assumptions.
